--- a/MessageBoard/MessageBoard.csproj
+++ b/MessageBoard/MessageBoard.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Data\IMessageBoardRepository.cs" />
     <Compile Include="Data\MessageBoardContext.cs" />
+    <Compile Include="Data\MessageBoardMigrationsConfiguration.cs" />
     <Compile Include="Data\MessageBoardRepository.cs" />
     <Compile Include="Data\Reply.cs" />
     <Compile Include="Data\Topic.cs" />
